@@ -5,11 +5,11 @@
     <parent>
         <groupId>io.mosip.datashare</groupId>
         <artifactId>durian</artifactId>
-        <version>1.2.1-SNAPSHOT</version>
+        <version>1.3.1-rc.1</version>
     </parent>
 
     <artifactId>data-share</artifactId>
-    <version>1.2.1-SNAPSHOT</version>
+    <version>1.3.1-rc.1</version>
     <packaging>pom</packaging>
 
     <name>data-share</name>
@@ -27,19 +27,21 @@
 
         <spring-cloud-config.version>2.0.4.RELEASE</spring-cloud-config.version>
         <h2.version>1.4.197</h2.version>
-        <kernel.core.version>1.2.1-SNAPSHOT</kernel.core.version>
-        <kernel.logger.logback.version>1.2.1-SNAPSHOT</kernel.logger.logback.version>
+        <kernel.core.version>1.3.1-rc.1</kernel.core.version>
+        <kernel.logger.logback.version>1.3.1-rc.1</kernel.logger.logback.version>
         <kernel.crypto-jce.version>1.0.6</kernel.crypto-jce.version>
         <powermock.beta.version>2.0.7</powermock.beta.version>
         <mockito-core.version>3.11.2</mockito-core.version>
         <mockito.version>2.28.2</mockito.version>
-        <kernel.object.store.version>1.2.1-SNAPSHOT</kernel.object.store.version>
+        <kernel.object.store.version>1.3.1-rc.1</kernel.object.store.version>
         <sonar.coverage.exclusions>**/constant/**,**/config/**,**/cache/**,**/dto/**,**/model/**,**/exception/**,**/repository/**,**/security/**,**/*Config.java,**/*Application.java,**/*Handler.java,**/*RestUtil.java</sonar.coverage.exclusions>
         <sonar.cpd.exclusions>**/dto/**,**/config/**,**/api/**</sonar.cpd.exclusions>
         <io.micrometer.prometheus.version>1.4.2</io.micrometer.prometheus.version>
         <gson.version>2.8.4</gson.version>
 
         <spring.security.web.version>6.2.4</spring.security.web.version>
+        <maven.deploy.plugin.version>3.1.1</maven.deploy.plugin.version>
+        <central.publishing.maven.plugin.version>0.7.0</central.publishing.maven.plugin.version>
     </properties>
 
     <modules>
@@ -95,6 +97,7 @@
                         --add-opens java.base/java.lang=ALL-UNNAMED
                         --add-opens java.base/java.util=ALL-UNNAMED
                         --add-opens java.base/java.net=ALL-UNNAMED
+                        --add-opens java.base/java.time.format=ALL-UNNAMED
                     </argLine>
                 </configuration>
             </plugin>
@@ -171,28 +174,41 @@
                 </configuration>
             </plugin>
             <plugin>
-                <groupId>pl.project13.maven</groupId>
-                <artifactId>git-commit-id-plugin</artifactId>
-                <version>3.0.1</version>
+                <artifactId>maven-deploy-plugin</artifactId>
+                <version>${maven.deploy.plugin.version}</version>
+                <configuration>
+                    <skip>true</skip>
+                </configuration>
                 <executions>
                     <execution>
-                        <id>get-the-git-infos</id>
+                        <id>default-deploy</id>
+                        <phase>none</phase>
                         <goals>
-                            <goal>revision</goal>
+                            <goal>deploy</goal>
                         </goals>
-                        <phase>validate</phase>
+                        <configuration>
+                            <skip>true</skip>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.sonatype.central</groupId>
+                <artifactId>central-publishing-maven-plugin</artifactId>
+                <version>${central.publishing.maven.plugin.version}</version>
+                <extensions>true</extensions>
+                <executions>
+                    <execution>
+                        <id>default-publish</id>
+                        <phase>none</phase>
+                        <goals>
+                            <goal>publish</goal>
+                        </goals>
                     </execution>
                 </executions>
                 <configuration>
-                    <generateGitPropertiesFile>true</generateGitPropertiesFile>
-                    <generateGitPropertiesFilename>${project.build.outputDirectory}/git.properties</generateGitPropertiesFilename>
-                    <includeOnlyProperties>
-                        <includeOnlyProperty>^git.build.(time|version)$</includeOnlyProperty>
-                        <includeOnlyProperty>^git.commit.id.(abbrev|full)$</includeOnlyProperty>
-                    </includeOnlyProperties>
-                    <commitIdGenerationMode>full</commitIdGenerationMode>
-                    <dotGitDirectory>${project.basedir}/.git</dotGitDirectory>
-                    <!-- <format>json</format> -->
+                    <publishingServerId>ossrh</publishingServerId>
+                    <autoPublish>false</autoPublish>
                 </configuration>
             </plugin>
         </plugins>
